0.3.0 Release
Big Refactor. Simplifies design and fixes memory unsafe code.

Signed-off-by: Hadi Chokr <hadichokr@icloud.com>